force-app/main/default/objects/ContactChannel__c/ContactChannel__c.object-meta.xml
<CustomObject>
    <description
  >A contact&apos;s channel. Relates this person with an existing channel for communications.</description>
    <label>Contact Channel</label>
    <nameField>
        <label>Contact&apos;s Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Channels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>