force-app/main/default/objects/ContactChannel__c/fields/ChannelRef__c.field-meta.xml
<CustomField>
    <fullName>ChannelRef__c</fullName>
    <label>Channel</label>
    <referenceTo>ConversationChannel__c</referenceTo>
    <relationshipLabel>Contact Channels</relationshipLabel>
    <relationshipName>ContactChannels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>