force-app/main/default/objects/ContactChannel__c/fields/RecipientId__c.field-meta.xml
<CustomField>
    <fullName>RecipientId__c</fullName>
    <description
  >The unique, platform-specific, identifier of the recipient.</description>
    <inlineHelpText
  >The unique, platform-specific, identifier of the recipient.</inlineHelpText>
    <label>Recipient Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>