force-app/main/default/objects/ContactChannel__c/fields/RelatedEntityRef__c.field-meta.xml
<CustomField>
    <fullName>RelatedEntityRef__c</fullName>
    <description
  >Field that stores the ID (as text) for another person entity, such as a Contact or Lead.</description>
    <label>Related Entity ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>